--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,14 @@ html {
 
 @font-face {
   font-family: 'barcadebrawl';
-  src: url('./assets/fonts/BarcadeBrawl.ttf')
+  src: url('./assets/fonts/BarcadeBrawl.ttf');
 }
 
 body {
   font-family: 'barcadebrawl', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  font-size: 1.6rem;
+  font-size: 1rem;
 
   background-image: url('./assets/images/bg.png');
   background-repeat: repeat;
